# scoomper

./: .gitignore  LICENSE  README.md  scoomper.cabal  stack.yaml
src/: Main.hs
