name:                scoomper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ratatosk/scoomper#readme
license:             BSD3
license-file:        LICENSE
author:              Pavel Grafov
maintainer:          graphov@gmail.com
copyright:           (c) 2016 Pavel Grafov
category:            Other
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable scoomper
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , implicit
